<resources>
    <string name="app_name">Medica Online</string>
    <string name="title_activity_refence">RefenceActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">Buscar</string>
    <string name="tab2">Citas</string>
    <string name="tab3">Historial</string>
    <string name="tab4">Yo</string>
    <string name="General">Médico General</string>
    <string name="Pediatra">Pediatra</string>
    <string name="oftalmologo">Oftalmólogo</string>
    <string name="Ginecologo">Ginecólogo</string>
    <string name="Dematologo">Dermatólogo</string>
    <string name="destista">Dentista</string>
    <string name="enfermeria">Enfermería</string>
    <string name="Hospitales">Hospital</string>
    <string name="Emergencia">Emergencias</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Inicio</string>


    <string-array name="spinner_item">
        <item>Paciente</item>
        <item>Médico</item>
    </string-array>

</resources>
