<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tab_search"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/tab1"/>

    <item
        android:id="@+id/tab_list"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/tab2"/>

    <item
        android:id="@+id/tab_history"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/tab3"/>

    <item
        android:id="@+id/tab_profile"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/tab4"/>
</menu>